k8s/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-valkey
  namespace: immich
  labels:
    component: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
      component: valkey
  template:
    metadata:
      labels:
        app: immich
        component: valkey
    spec:
      containers:
        - name: immich-valkey
          image: docker.io/valkey/valkey:9.0-alpine # {"$imagepolicy": "flux-system:immich-valkey"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: valkey
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping | grep PONG
            failureThreshold: 10
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping | grep PONG
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - valkey-cli ping | grep PONG
            failureThreshold: 10
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 8Mi
            limits:
              cpu: 64m
              memory: 32Mi
      volumes:
        - name: data
          emptyDir:
            sizeLimit: 2Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich
    component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
      component: server
  template:
    metadata:
      labels:
        app: immich
        component: server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.3.1 # {"$imagepolicy": "flux-system:immich-server"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2283
              name: http
          volumeMounts:
            - name: library-storage
              mountPath: /usr/src/app/upload
          startupProbe:
            httpGet:
              path: /api/server/ping
              port: http
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 10
            failureThreshold: 15
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/server/ping
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 256m
              memory: 1Gi
      volumes:
        - name: library-storage
          persistentVolumeClaim:
            claimName: immich-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
  namespace: immich
  labels:
    app: immich
    component: machine-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
      component: machine-learning
  template:
    metadata:
      labels:
        app: immich
        component: machine-learning
    spec:
      containers:
        - name: immich-ml
          image: ghcr.io/immich-app/immich-machine-learning:v3.3.0 # {"$imagepolicy": "flux-system:immich-ml"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
              name: http
          volumeMounts:
            - name: ml-cache
              mountPath: /cache
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 5m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 512Mi
      volumes:
        - name: ml-cache
          persistentVolumeClaim:
            claimName: immich-ml-pvc
