k8s/immich/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  ports:
    - port: 80
      targetPort: 2283
      protocol: TCP
  selector:
    app: immich
    component: server
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
  namespace: immich
spec:
  ports:
    - name: http
      port: 3003
      protocol: TCP
  selector:
    app: immich
    component: machine-learning
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: immich
spec:
  ports:
    - name: http
      port: 6379
      protocol: TCP
  selector:
    app: immich
    component: valkey
  type: ClusterIP
