k8s/immich/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
  annotations:
    gethomepage.dev/group: Selfhosted
    gethomepage.dev/enabled: "true"
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/icon: immich.png
    gethomepage.dev/name: Immich
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - immich.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 80
